# gradebot-guru

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  release.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
demo/: assignment_rubric.csv  config-full-ideas.json  config.json  provider-examples.txt  rubric.csv  submission1.txt  submission2.txt
demo/submissions/: submission1.txt
demo/text-submissions/: alealson_341_8446_data info and kno.txt  hurdoyalsevan_346_8320_Ayush Hurdoyal Assigment 1 Data, Information, and Knowledge in the Context of Information Security and Risk Management.txt  khatiwadabipral_LATE_291_8489_2400075.txt  koiralaprastut_297_8478_Prastut Koirala 2400077 SEC102.txt  pariyarritesh_342_8473_pariyar.ritesh_sec102.txt  upretisrijala_LATE_299_8488_Assesment1_Information Risk and Security.txt
docs/: CHANGELOG.md  architecture.md  change_log.md  configuration.md  contributing.md  developer_guide.md  index.md  installation.md  project_management.md  roadmap.md  srs.md  user_guide.md
docs/admin_scripts/: generate_markdown.md  release.md  upload_issues.md
docs/adr/: 0001-configuration-loader.md  0002-logging-configuration.md  0003-load-rubric.md  0004-submission-loader.md  0005-base-llm-interface.md  0005-use-custom-llm-interface.md  0006-base-llm-interface.md  0006-openai-llm-interface.md  0007-openai-llm-interface.md  0008-llm-factory.md  0009-build-process.md  0010-project-code-consistency.md  0011-improving-marking-consistency.md  0012-default-loaders.md  0013-function-based-approach.md  0014-llm-inference.md  0015-semantic-versioning.md  0016-rubric-schema.md  0017-categorised-commit-messages.md  0018-aggregation-strategies.md  adr_001_example.md  adr_template.md
docs/api/: base_llm.md  config.md  core.md  factory.md  grader.md  local_llm.md  logging_config.md  main.md  openai_llm.md  overview.md  prompts.md  response_parser.md  rubric_loader.md  submission_loader.md  text_analysis.md
docs/examples/: config.md  prompts.md  rubric.md  submissions.md
docs/tests/: __init__.md  test_base_llm.md  test_config.md  test_core.md  test_grader.md  test_integration.md  test_llm_factory.md  test_local_llm.md  test_logging.md  test_main.md  test_openai_llm.md  test_prompts.md  test_response_parser.md  test_rubric_loader.md  test_submission_loader.md  test_utils.md
gradebotguru/: config.py  core.py  gradebotguru.py  grader.py  logging_config.py  main.py  prompts.py  response_parser.py  rubric_loader.py  submission_loader.py  submissions_loader.py  text_analysis.py
gradebotguru/llm_inference/: api.py  base_llm.py  factory.py  gemini.py  openai.py
gradebotguru/llm_interface/: factory.py  local_llm.py  openai_llm.py
gradebotguru/submissions/text-submissions/: davilafabioalejandromartinez_348_8456_Assessment1_Essay_Fabio_Martinez_2400119.txt  jatshothubtenloday_300_8465_Sec 102_2400051.txt  klutseymadibankunukweku_313_8481_data, information and knowlege essay_Madiba_Klutsey.txt  mehlakartik_317_8474_Kartik (Student ID = 2400090) assignment 1.txt  wangchukkhandu_294_8463_Khandu_Wangchuk_SEC102_Assessment1.txt
scripts/: config.json  generate_markdown.py  issues-1.json  issues-2.json  release.py  upload_issues_from_json.py
src/gradebotguru/: __init__.py  config.py  core.py  grader.py  logging_config.py  main.py  prompts.py  response_parser.py  rubric_loader.py  submission_loader.py  text_analysis.py
src/gradebotguru/llm_interface/: __init__.py  base_llm.py  factory.py  local_llm.py  openai_llm.py
src/gradebotguru/submissions/: __init__.py  extract.py
src/gradebotguru/submissions/text-submissions/: abbashamza_338_8469_Essay pdf 2.txt  andradejulianalexisdaza_339_8450_Assessment 1 Risks.txt  gurungamit_LATE_304_8487_SEC 102 Assigment 2.txt  harshdeep_332_8470_Harsh (Student ID=2400069) Assignment 1.txt  kajal_336_8452_kajal_2400100 SEC102_Assignment 1.txt  kibettimothykipchirchir_345_8485_Document.txt  lingdensimit_298_8477_Lingden_Simit_SEC102_Assignment_1.txt  mathotagethilinitharakarukshani_334_8486_Mathotage_Thilini_SEC102_Assessment 1.txt  rimalbibek_316_8483_sem 2 info, risk and security ass 1.txt  wwangchukkuendenyoesel_295_8448_assignment 1 for sec102 kuenden.txt  (+1 more)
submissions/: extract.py
submissions/text-submissions/: kaursukhraj_331_8467_Sukhraj Kaur, Student ID 2400064.txt  mahak_333_8454_Mahak (Student ID=2400074) Assignment 1 (Michael).txt  namgyalrigden_340_8458_Namgyal_Rigden_2400112_Assesment 1.txt
tests/: overview.md  test_base_llm.py  test_basellm.py  test_config.py  test_core.py  test_grader.py  test_llm_factory.py  test_llm_interface.py  test_local_llm.py  test_logging.py  test_main.py  test_openai_llm.py  test_prompts.py  test_response_parser.py  test_rubric_loader.py  test_submission_loader.py  test_utils.py
tests/integeration/: test_integeration.py
tests/integration/: test_integration.py
