[tool.poetry]
name = "gradebotguru"
version = "0.1.0"
description = "AI-powered grading assistant for fast, accurate, and insightful feedback on student work."
authors = ["Michael Borck <michael.borck@curtin.edu.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
